--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "requirejs": ">2.0.0",
     "bootstrap": ">3.0.0",
     "jquery": ">2.0.0",
-    "lodash": ">2.4.0"
+    "lodash": ">2.4.0",
+    "modernizr": "*"
   }
 }
