--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": ">3.0.0",
     "jquery": ">2.0.0",
     "lodash": ">2.4.0",
-    "modernizr": "*"
+    "modernizr": "*",
+    "fontawesome": "*"
   }
 }
