--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "bower": "*",
         "grunt": ">0.4.0",
+        "grunt-cli": "*",
         "grunt-contrib-watch": "*",
         "grunt-contrib-less": "~0.9.0",
         "grunt-contrib-requirejs": "~0.4.1",
