--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery": ">2.0.0",
     "lodash": ">2.4.0",
     "modernizr": "*",
-    "fontawesome": "*"
+    "fontawesome": "*",
+    "shine": "~0.2.6"
   }
 }
