--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "gideonfarrell.co.uk",
-    "version": "0.0.1",
-    "author": "Gideon Farrell <me@gideonfarrell.co.uk>",
-    "description": "Personal website of Gideon Farrell",
-    "devDependencies": {
-        "bower": "*",
-        "grunt": ">0.4.0",
-        "grunt-cli": "*",
-        "grunt-contrib-watch": "*",
-        "grunt-contrib-less": "~0.9.0",
-        "grunt-contrib-requirejs": "~0.4.1",
-        "clean-css": "~2.1.1",
-        "uglify-js": "*",
-        "load-grunt-tasks": "*",
-        "grunt-autoprefixer": "*"
-    }
+  "name": "gideonfarrell.co.uk",
+  "version": "0.0.1",
+  "author": "Gideon Farrell <me@gideonfarrell.co.uk>",
+  "description": "Personal website of Gideon Farrell",
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "clean-css": "^2.2.16",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^1.0.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.1",
+    "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sftp-deploy": "^0.2.1",
+    "load-grunt-config": "^0.16.0"
+  }
 }
