--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "jquery": "~2.1.1",
     "requirejs": "~2.1.15",
     "lodash": "~2.4.1",
-    "responsive": "~3.1.3"
+    "responsive": "~3.1.3",
+    "particles.js": "~1.0.0"
   }
 }
